SET(MAIN_SOURCES
  main.cpp
  Controler/Controler.cpp
  Controler/Keyboard.cpp
  Controler/Mouse.cpp
  FreeType/Character.cpp
  FreeType/Font.cpp
  FreeType/FreeType.cpp
  FreeType/Ft.cpp
  Objects/Background.cpp
  Objects/BreakingTile.cpp
  Objects/Buildings/BuildingBase.cpp
  Objects/Buildings/Buildings.cpp
  Objects/Buildings/EnhancementShop.cpp
  Objects/Buildings/GasStation.cpp
  Objects/Buildings/RepairShop.cpp
  Objects/Buildings/Shop.cpp
  Objects/Clouds.cpp
  Objects/CollisionTile.cpp
  Objects/Grass.cpp
  Objects/Mineral.cpp
  Objects/Model.cpp
  Objects/Tile.cpp
  Objects/Tiles.cpp
  Painter/CameraGL2.cpp
  Painter/PainterGL2.cpp
  Painter/Sprite.cpp
  Painter/Texture.cpp
  Robot/Cargo.cpp
  Robot/Drill.cpp
  Robot/Engine.cpp
  Robot/Fuel.cpp
  Robot/Hull.cpp
  Robot/MainSystem.cpp
  Robot/Money.cpp
  Robot/Physics.cpp
  Robot/Robot.cpp
  SDL/SDL_OpenGL.cpp
  Utils/Color.cpp
  Utils/Exception.cpp
  Utils/GameOverException.cpp
  Utils/Layer.cpp
  Utils/OpenglVersion.cpp
  Utils/Tools.cpp
  Utils/Vector2.cpp
  Window/KObject.cpp
  Window/Surface.cpp
  Window/Widget.cpp
  Window/WPainter.cpp
  )

SET(MAIN_HEADERS
    Interfaces/FuelUseInterface.hpp
    Interfaces/LoadInterface.hpp
    Interfaces/MouseInterface.hpp
    Interfaces/PaintInterface.hpp
    Interfaces/TickInterface.hpp
    Painter/Camera.hpp
    Painter/Painter.hpp
    Robot/Enums.hpp
    Utils/Action.hpp
    Utils/Log.hpp
    Utils/Utils.hpp
    Window/Enums.hpp
    )

INCLUDE_DIRECTORIES(.)

ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SOURCES} ${MAIN_HEADERS})

INCLUDE_DIRECTORIES(
    ${SDL2_INCLUDE_DIRS}
    ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIRS}
    ${FREETYPE_INCLUDE_DIRS}
    ${ICU_INCLUDE_DIRS}
    )

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${SDL2_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLEW_LIBRARIES}
    ${PNG_LIBRARIES}
    ${FREETYPE_LIBRARIES}
    ${ICU_LIBRARIES}
    )
